[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Space-Invaders.png" type="Texture" id=1]
[ext_resource path="res://src/SpaceShip.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.8073, 4.8923 )

[node name="SpaceShip" type="Area2D"]
position = Vector2( 63.1369, 35.7328 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
speed = 150

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1, 49, 16, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.14854, 3.19044 )
shape = SubResource( 1 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -20, 0 )
collide_with_areas = true

[node name="RayCastRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 20, 0 )
collide_with_areas = true

[node name="BulletPosition" type="Position2D" parent="."]
position = Vector2( 1.02369, -20.395 )
